# boto3-refresh-session

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  README.template.md  authorization.html  authors.html  bump_version.py  changelog.html  contributing.html  example_policy.json  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  qanda.html  raison.html  readme.py  script.py  search.html  searchindex.js  usage.html
.doctrees/: authorization.doctree  authors.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  qanda.doctree  raison.doctree  usage.doctree
.doctrees/api/: cache.doctree  config.doctree  custom.doctree  exceptions.doctree  index.doctree  iot.doctree  session.doctree  sts.doctree
.doctrees/modules/: custom.doctree  ecs.doctree  exceptions.doctree  index.doctree  iot.doctree  session.doctree  sts.doctree
.doctrees/reference/: index.doctree
.doctrees/reference/session/: boto3_refresh_session.session.doctree
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: CODEOWNERS  pull_request.yml  push.yml  push_pullrequest.yml  release.yml  tag.yml  update-readme.yml  validate_pr_title.yml
_sources/: authors.rst.txt  changelog.rst.txt  contributing.rst.txt  index.rst.txt  qanda.rst.txt  raison.rst.txt  usage.rst.txt
_sources/api/: custom.rst.txt  exceptions.rst.txt  iot.rst.txt  session.rst.txt  sts.rst.txt
_sources/modules/: ecs.rst.txt  exceptions.rst.txt  iot.rst.txt  session.rst.txt  sts.rst.txt
_sources/reference/: index.rst.txt
_sources/reference/session/: boto3_refresh_session.session.rst.txt
_static/: documentation_options.js
api/: cache.html  config.html  custom.html  exceptions.html  index.html  iot.html  session.html  sts.html
boto3_refresh_session/: __init__.py  ecs.py  exceptions.py  session.py  session.pyi  sts.py  utils.py
boto3_refresh_session/methods/: __init__.py  custom.py  custom.pyi  ecs.py  sts.py  sts.pyi
boto3_refresh_session/methods/iot/: __init__.py  certificate.py  certificate.typed  cognito.py  cognito.typed  core.py  core.pyi  x509.py  x509.pyi
boto3_refresh_session/utils/: __init__.py  cache.py  config.py  config.pyi  constants.py  data_structures.py  extras.py  internal.py  typing.py
boto3_refresh_session/utils/config/: __init__.py  config.py
doc/: authorization.rst  changelog.rst  conf.py  index.rst  installation.rst  raison.rst  usage.rst
doc/_build/: .buildinfo  .buildinfo.bak  authorization.html  authors.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/.doctrees/: authorization.doctree  authors.doctree  environment.pickle  index.doctree  installation.doctree
doc/_build/.doctrees/reference/: index.doctree
doc/_build/.doctrees/reference/session/: boto3_refresh_session.session.AutoRefreshableSession.doctree  boto3_refresh_session.session.doctree
doc/_build/_sources/: authorization.rst.txt  index.rst.txt  installation.rst.txt
doc/_build/_sources/reference/: index.rst.txt
doc/_build/reference/: index.html
doc/_build/reference/session/: boto3_refresh_session.session.AutoRefreshableSession.html  boto3_refresh_session.session.html
doc/api/: cache.rst  config.rst  index.rst  iot.rst  session.rst  sts.rst
doc/modules/: config.rst  custom.rst  ecs.rst  exceptions.rst  index.rst  iot.rst  session.rst  sts.rst
doc/reference/: index.rst
doc/reference/session/: boto3_refresh_session.session.AutoRefreshableSession.rst  boto3_refresh_session.session.rst
docs/: changelog.rst  conf.py  contributing.md  index.rst  usage.rst
docs/_static/: custom.css
docs/_templates/autosummary/: class.rst
docs/_templates/components/: view-this-page.html
docs/api/: cache.rst  index.rst
modules/: custom.html  ecs.html  exceptions.html  index.html  iot.html  session.html  sts.html
reference/: index.html
reference/session/: boto3_refresh_session.session.html
scripts/: bump_version.py  get_pr_title.py
tests/: test_cache.py  test_config.py  test_mfa_token_provider.py  test_packaging.py  test_session.py  test_session_stubbed.py
tests/ecs/: Dockerfile.ecs_test  ecs_mock_server.py  ecs_test.sh
