[project]
name = "boto3-refresh-session"
version = "7.0.2"
description = "A simple Python package for refreshing the temporary security credentials in a boto3.session.Session object automatically."
authors = [
    {name = "Mike Letts",email = "lettsmt@gmail.com"}
]
license = { text = "MPL-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["boto3", "botocore", "requests", "typing-extensions", "awscrt", "awsiotsdk"]
keywords = ["boto3", "botocore", "aws", "sts", "credentials", "token", "refresh", "iot", "x509", "mqtt"]
maintainers = [
  {name="Michael Letts", email="lettsmt@gmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Topic :: Security",
]

[tool.poetry]
include = ["NOTICE"]

[project.urls]
repository = "https://github.com/michaelthomasletts/boto3-refresh-session"
documentation = "https://michaelthomasletts.github.io/boto3-refresh-session/index.html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
pydata-sphinx-theme = "^0.16.1"
numpydoc = "^1.8.0"
tomlkit = "^0.13.2"
flask = "^3.1.1"

[tool.black]
line-length = 79
target-version = ["py310"]
quiet = true

[tool.isort]
line_length = 79
ensure_newline_before_comments = true
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s - %(name)s - %(levelname)s - %(message)s"